# crehana_test

./: .env.example  .flake8  .gitignore  DECISION_LOG.md  Makefile  README.md  docker-compose.yml  main.tf  pyproject.toml
app/: config.py  main.py
app/domain/repositories/: task.py  task_list.py  user.py
app/graphql/: mutation.py  mutations.py  permissions.py  query.py  schema.py  utils.py
app/graphql/mutations/: task.py  task_list.py  user.py
app/graphql/queries/: task.py  task_list.py  user.py
app/graphql/types/: __init__.py  enums.py  task.py  task_list.py  user.py
app/infrastructure/auth/: jwt_service.py  password_hasher.py
app/infrastructure/db/: base.py  models.py  repositories.py
app/infrastructure/db/models/: __init__.py  task.py  user.py
app/infrastructure/db/repositories/: task.py  task_list.py  user.py
app/infrastructure/email/: fake_sender.py
tests/: config.py
tests/graphql/: test_task_list_mutations.py  test_task_list_queries.py  test_task_mutation.py  test_task_mutations.py  test_task_queries.py  test_user_mutations.py  test_user_queries.py
